# meilisearch_api_key_gen

./: README.md  pyproject.toml
src/meilisearch_api_key_gen/: keygen.py  request.py
